--- a/bin/splash.html
+++ b/bin/splash.html
@@ -4,7 +4,7 @@
   <link href="/datos/assets/application-b05cae2ed22cfae5df18a19b5627f607.css" media="all" rel="stylesheet" type="text/css">
   <script src="/datos/assets/application-d35feba68da326816eacd57b61f15814.js" type="text/javascript"></script>
   <meta content="authenticity_token" name="csrf-param">
-<meta content="GbryJolu7bDVGJgEbvrzFe4ey9URS2esJadYmh2cDJs=" name="csrf-token">
+<meta content="5+OKVOMkxFd/W8UbEvxeRjaLrjR6gAMMGeHD/91/lUk=" name="csrf-token">
   
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -50,315 +50,202 @@
 
 
         <div class="container">
-			<div class="row">
-				<h2>
-          Establecimientos Escolares
-          
-          <span style="float:right;">
-            <a href="http://datos.mec.gov.py/data/establecimientos" style="font-size:12px;" title="Ir al dataset">Ver datos</a>
-            <a href="http://datos.mec.gov.py/data/establecimientos" title="Ir al dataset"><img alt="Datos_ico" src="/datos/assets/datos_ico-235aa8d4746b52bb7b824cd58914b22c.jpg" style="width:24px;"></a>
+	<div class="row">
+		<h2>
+			Matriculaciones por Educación Inclusiva
+			<span style="float:right;">
+            <a href="http://datos.mec.gov.py/data/matriculaciones_educacion_inclusiva" style="font-size:12px;" title="Ir al dataset">Ver datos</a>
+            <a href="http://datos.mec.gov.py/data/matriculaciones_educacion_inclusiva" title="Ir al dataset"><img alt="Datos_ico" src="/datos/assets/datos_ico-235aa8d4746b52bb7b824cd58914b22c.jpg" style="width:24px;"></a>
             <a href="http://datos.mec.gov.py/index" style="font-size:12px;" title="Ir al inicio">Inicio</a>
             <a href="http://datos.mec.gov.py/index" title="Ir al inicio"><img alt="Home" src="/datos/assets/home-a6d8bcca2e6d171f00337831ffb95828.png" style="width:24px;"></a>
           </span>
-
-        </h2>
-        <div style="clear:both;">
-				<table class="table table-striped table-bordered table-hover">
-					<thead>
-						<tr>
-							<th title="Field #1">
-								Nombre del Atributo
-							</th>
-							<th title="Field #2">
-								Descripción
-							</th>
-							<th title="Field #3">
-								Tipo de datos
-							</th>
-							<th title="Field #4">
-								Restricciones
-							</th>
-							<th title="Field #5">
-								Referencia
-							</th>
-							<th title="Field #6">
-								Ejemplo
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>
-								AÑO
-							</td>
-							<td>
-								Se refiere al año de captura de los datos
-							</td>
-							<td>
-								xsd:gYear
-							</td>
-							<td>
-								Sólo permite la carga de datos del año de su captura.
-							</td>
-							<td></td>
-							<td>
-								2012
-							</td>
-						</tr>
-						<tr>
-							<td>
-								CODIGO_ESTABLECIMIENTO
-							</td>
-							<td>
-								Código de establecimiento permite identificar en forma única los diferentes establecimientos educativos que se encuentran en el país.<br>
-								El Sistema de informacion de Estadística Continua (SIEC) considera “Establecimiento Escolar” a la construcción que existe dentro de un predio (terreno) que se emplea para la enseñanza, donde puede funcionar una o más instituciones educativas con sus respectivos niveles/modalidades de educación.<br>
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 7 caracteres
-							</td>
-							<td>
-								<a href="http://www.mec.gov.py/planificacion_educativa/Revistas/Reglamento_SIEC.pdf">Reglamento del Sistema de Información de Estadística Continua (SIEC)</a>
-							</td>
-							<td>
-								0010001
-							</td>
-						</tr>
-						<tr>
-							<td>
-								CODIGO_DEPARTAMENTO
-							</td>
-							<td>
-								Corresponde al código asignado según la cartografía nacional al departamento geográfico donde esta localizado el establecimiento escolar.
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 2 caracteres
-							</td>
-							<td></td>
-							<td>
-								00
-							</td>
-						</tr>
-						<tr>
-							<td>
-								NOMBRE_DEPARTAMENTO
-							</td>
-							<td>
-								Corresponde a la descripción del nombre del departamento geográfico correspondiente al código.
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 40 caracteres
-							</td>
-							<td></td>
-							<td>
-								ASUNCION
-							</td>
-						</tr>
-						<tr>
-							<td>
-								CODIGO_DISTRITO
-							</td>
-							<td>
-								Corresponde al código asignado al distrito del departamento geográfico donde esta localizado el establecimiento escolar..
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 2 caracteres
-							</td>
-							<td></td>
-							<td>
-								00
-							</td>
-						</tr>
-						<tr>
-							<td>
-								NOMBRE_DISTRITO
-							</td>
-							<td>
-								Corresponde a la descripción del nombre del distrito correspondiente al código.
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 40 caracteres
-							</td>
-							<td></td>
-							<td>
-								ASUNCION
-							</td>
-						</tr>
-						<tr>
-							<td>
-								CODIGO_BARRIO_LOCALIDAD
-							</td>
-							<td>
-								Corresponde al código asignado a la localidad o barrio del distrito donde esta localizado el establecimiento escolar..
-							</td>
-							<td>
-								xsd:positiveInteger
-							</td>
-							<td></td>
-							<td></td>
-							<td>
-								033
-							</td>
-						</tr>
-						<tr>
-							<td>
-								NOMBRE_BARRIO_LOCALIDAD
-							</td>
-							<td>
-								Corresponde a la descripción del nombre del barrio o localidad correspondiente al código.
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 40 caracteres
-							</td>
-							<td></td>
-							<td>
-								PRESIDENTE CARLOS ANTONIO LOPEZ
-							</td>
-						</tr>
-						<tr>
-							<td>
-								CODIGO_ZONA
-							</td>
-							<td>
-								Corresponde a la ubicación del establecimiento escolar, sea en la zona urbana o rural. Se considera: Código 1 .Zona Urbana: Área geográfica que abarca todas las cabeceras distritales de la República y sus viviendas generalmente estan organizadas en manzanas.<br>
-								Código 2. Zona Rural: Área geográfica que se encuentran fuera de las cabeceras distritales y las viviendas se localizan en forma dispersa pudiendo existir zonas amanzanadas pero que no tienen la categoría de Cabeceras Distritales por la cual se consideraran como rurales.<br>
-							</td>
-							<td>
-								xsd:positiveInteger
-							</td>
-							<td>
-								Valores que pueden ser: Código 1: cuando el código de localidad es menor 100 Código 6: cuando el código de localidade es mayor o igual a 100
-							</td>
-							<td></td>
-							<td>
-								1
-							</td>
-						</tr>
-						<tr>
-							<td>
-								NOMBRE_ZONA
-							</td>
-							<td>
-								Corresponde a la descripción del nombre de la zona correspondiente al código
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 7 caracteres
-							</td>
-							<td></td>
-							<td>
-								URBANA
-							</td>
-						</tr>
-						<tr>
-							<td>
-								DIRECCION
-							</td>
-							<td>
-								Corresponde al nombre de la calle, avenida, carretera, etc., del establecimiento escolar.
-							</td>
-							<td>
-								xsd:string
-							</td>
-							<td>
-								No más de 50 caracteres
-							</td>
-							<td></td>
-							<td>
-								MELO DE PORTUGAL E/ MAYOR MARTINEZ Y CPTAN. ARANDA
-							</td>
-						</tr>
-						<tr>
-							<td>
-								COORDENADAS_Y
-							</td>
-							<td>
-								Corresponde a las coordenadas planas (en metros). Las coordenadas "Y" , cuyo valor es mayor a 7.000.000 m, salvo al sur en el límite con la República Argentina donde podrían aparecer valores cercanos a 6.950.000 m
-							</td>
-							<td>
-								xsd:positiveInteger
-							</td>
-							<td>
-								No más de 7 digitos
-							</td>
-							<td></td>
-							<td>
-								7202502
-							</td>
-						</tr>
-						<tr>
-							<td>
-								COORDENADAS_X
-							</td>
-							<td>
-								Corresponde a las coordenadas planas ( en metros).Valores de las coordenadas X , cuyo valor será siempre menor a 1.000.000 m.
-							</td>
-							<td>
-								xsd:positiveInteger
-							</td>
-							<td>
-								No más de 6 digitos
-							</td>
-							<td></td>
-							<td>
-								433358
-							</td>
-            </tr>
-						<tr>
-							<td>
-								LATITUD
-							</td>
-							<td>
-								Corresponde a los valores de coordenadas geográficas, es decir la Latitud , las cuales se expresan en Grados (Gra), minutos (min) y segundos (seg).
-							</td>
-							<td>
-								xsd:positiveInteger
-							</td>
-							<td></td>
-							<td>
-								<a href="https://support.google.com/maps/answer/18539?hl=es">Referencia de Google Maps</a>
-							</td>
-							<td>
-								25° 17' 32.903" S
-							</td>
-						</tr>
-						<tr>
-							<td>
-								LONGITUD
-							</td>
-							<td>
-								Se refiere al año de captura de los datos
-							</td>
-							<td>
-								xsd:positiveInteger
-							</td>
-							<td></td>
-							<td>
-								<a href="https://support.google.com/maps/answer/18539?hl=es">Referencia de Google Maps</a>
-							</td>
-							<td>
-								57° 39' 43.122" W
-							</td>
-            </tr>
+		</h2>
+		<table class="table table-striped table-bordered table-hover">
+			<thead>
+				<tr>
+					<th title="Field #1">
+						Nombre del Atributo
+					</th>
+					<th title="Field #2">
+						Descripción
+					</th>
+					<th title="Field #3">
+						Tipo de datos
+					</th>
+					<th title="Field #4">
+						Restricciones
+					</th>
+					<th title="Field #5">
+						Referencia
+					</th>
+					<th title="Field #6">
+						Ejemplo
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>
+						AÑO
+					</td>
+					<td>
+						Se refiere al año de captura de los datos
+					</td>
+					<td>
+						xsd:gYear
+					</td>
+					<td>
+						Sólo permite la carga de datos del año de su captura.
+					</td>
+					<td></td>
+					<td>
+						2012
+					</td>
+				</tr>
+				<tr>
+					<td>
+						CODIGO_DEPARTAMENTO
+					</td>
+					<td>
+						Corresponde al código asignado según la cartografía nacional al departamento geográfico donde esta localizado el establecimiento escolar.
+					</td>
+					<td>
+						xsd:string
+					</td>
+					<td>
+						No más de 2 caracteres
+					</td>
+					<td></td>
+					<td>
+						00
+					</td>
+				</tr>
+				<tr>
+					<td>
+						NOMBRE_DEPARTAMENTO
+					</td>
+					<td>
+						Corresponde a la descripción del nombre del departamento geográfico correspondiente al código.
+					</td>
+					<td>
+						xsd:string
+					</td>
+					<td>
+						No más de 40 caracteres
+					</td>
+					<td></td>
+					<td>
+						ASUNCION
+					</td>
+				</tr>
+				<tr>
+					<td>
+						CODIGO_DISTRITO
+					</td>
+					<td>
+						Corresponde al código asignado al distrito del departamento geográfico donde esta localizado el establecimiento escolar..
+					</td>
+					<td>
+						xsd:string
+					</td>
+					<td>
+						No más de 2 caracteres
+					</td>
+					<td></td>
+					<td>
+						00
+					</td>
+				</tr>
+				<tr>
+					<td>
+						NOMBRE_DISTRITO
+					</td>
+					<td>
+						Corresponde a la descripción del nombre del distrito correspondiente al código.
+					</td>
+					<td>
+						xsd:string
+					</td>
+					<td>
+						No más de 40 caracteres
+					</td>
+					<td></td>
+					<td>
+						ASUNCION
+					</td>
+				</tr>
+				<tr>
+					<td>
+						CODIGO_ZONA
+					</td>
+					<td>
+						Corresponde a la ubicación del establecimiento escolar, sea en la zona urbana o rural. Se considera: Código 1 .Zona Urbana: Área geográfica que abarca todas las cabeceras distritales de la República y sus viviendas generalmente estan organizadas en manzanas.<br>
+						Código 2. Zona Rural: Área geográfica que se encuentran fuera de las cabeceras distritales y las viviendas se localizan en forma dispersa pudiendo existir zonas amanzanadas pero que no tienen la categoría de Cabeceras Distritales por la cual se consideraran como rurales.<br>
+					</td>
+					<td>
+						xsd:positiveInteger
+					</td>
+					<td>
+						Valores que pueden ser: Código 1: cuando el código de localidad es menor 100 Código 6: cuando el código de localidade es mayor o igual a 100
+					</td>
+					<td></td>
+					<td>
+						1
+					</td>
+				</tr>
+				<tr>
+					<td>
+						NOMBRE_ZONA
+					</td>
+					<td>
+						Corresponde a la descripción del nombre de la zona correspondiente al código
+					</td>
+					<td>
+						xsd:string
+					</td>
+					<td></td>
+					<td></td>
+					<td>
+						URBANA
+					</td>
+				</tr>
+				<tr>
+					<td>
+						SECTOR O TIPO DE GESTION
+					</td>
+					<td>
+						Sector al que pertenece una institución educativa.<br>
+						Se considera :<br>
+						OFICIAL: Sector o tipo de gestión al que pertenece una institución educativa cuya organización y administración está a cargo del Estado paraguayo (Ministerio de Educación y Cultura, gobernaciones, municipios, binacionales). PRIVADA: Sector o tipo de gestión al que pertenece una institución educativa cuya organización y administración está a cargo de un organismo no estatal.<br>
+						PRIVADA SUBVENCIONADA: Sector o tipo de gestión al que pertenece una institución de gestión privada que recibe algún aporte del Estado, como ser rubros para docentes, monto en guaraníes, etc.<br>
+					</td>
+					<td>
+						xsd:string
+					</td>
+					<td>
+						Valores en el rango: OFICIAL, PRIVADA ,PRIVADA SUBVENCIONADA
+					</td>
+					<td></td>
+					<td>
+						PRIVADA
+					</td>
+				</tr>
+				<tr>
+					<td>
+						CANTIDAD_MATRICULADOS
+					</td>
+					<td>
+						Representa la cantidad total de matriculados en los departamentos por distrito
+					</td>
+					<td>
+						xsd:positiveInteger
+					</td>
+					<td></td>
+					<td></td>
+					<td>
+						93354
+					</td>
+        </tr>
 						<tr>
 							<td>
 								ANHO_COD_GEO 
@@ -377,82 +264,82 @@
                 <a href="/def/ejemplo_anio_cod_geo" target="_blank">Ver ejemplo</a>
               </td>
 						</tr>
-					</tbody>
-				</table>
-			</div>
-			<div class="row">
-				<h2>
-					Referencia
-				</h2>La siguiente tabla presenta una breve descripción de los atributos incluídos en el diccionario de datos del dataset.<br>
-				Básicamente, un diccionario de datos describe los atributos que contiene un dataset, incluyendo el tipo de dato y las restricciones se apliquen a cada uno.<br>
-				<br>
-				<br>
-				<table class="table table-striped table-bordered table-hover">
-					<thead>
-						<tr>
-							<th title="Field #1">
-								Nombre de la columna
-							</th>
-							<th title="Field #2">
-								Descripción
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>
-								Nombre del Atributo
-							</td>
-							<td>
-								Esteblace el nombre del atributo exactamente como se encuentra definido en el archivo de datos a ser publicado
-							</td>
-						</tr>
-						<tr>
-							<td>
-								Descripción
-							</td>
-							<td>
-								Describe con más detalles los datos que se encuentran en el atributo
-							</td>
-						</tr>
-						<tr>
-							<td>
-								Tipo de datos
-							</td>
-							<td>
-								El tipo de dato esperado de los valores del attributo. Por ejemplo: String, Integer, Float, …. Idealmente se deben utilizar los tipos de datos definidos en el Estándar XML Schema Datatypes de la W3C. <a href="http://www.w3.org/TR/xmlschema-2/#built-in-primitive-datatypes">http://www.w3.org/TR/xmlschema-2/#built-in-primitive-datatypes</a>, por ejemplo: xsd:string, xsd:boolean, xsd:dateTime
-							</td>
-						</tr>
-						<tr>
-							<td>
-								Restricciones
-							</td>
-							<td>
-								En caso que existan, se especifican las restricciones de los datos
-							</td>
-						</tr>
-						<tr>
-							<td>
-								Referencia
-							</td>
-							<td>
-								En caso que exista, se agrega un link a un documento de referencia para los datos. Por ejemplo, si los datos están definidos utilizando un estándar o formato diferente a XSD, referenciarlo, como ser la Latitud y Longitud en formato de Google maps
-							</td>
-						</tr>
-						<tr>
-							<td>
-								Ejemplo
-							</td>
-							<td>
-								Los valores de ejemplo
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
+			</tbody>
+		</table>
+	</div>
+	<div class="row">
+		<h2>
+			Referencia
+		</h2>La siguiente tabla presenta una breve descripción de los atributos incluídos en el diccionario de datos del dataset.<br>
+		Básicamente, un diccionario de datos describe los atributos que contiene un dataset, incluyendo el tipo de dato y las restricciones se apliquen a cada uno.<br>
+		<br>
+		<br>
+		<table class="table table-striped table-bordered table-hover">
+			<thead>
+				<tr>
+					<th title="Field #1">
+						Nombre de la columna
+					</th>
+					<th title="Field #2">
+						Descripción
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>
+						Nombre del Atributo
+					</td>
+					<td>
+						Esteblace el nombre del atributo exactamente como se encuentra definido en el archivo de datos a ser publicado
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Descripción
+					</td>
+					<td>
+						Describe con más detalles los datos que se encuentran en el atributo
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Tipo de datos
+					</td>
+					<td>
+						El tipo de dato esperado de los valores del attributo. Por ejemplo: String, Integer, Float, …. Idealmente se deben utilizar los tipos de datos definidos en el Estándar XML Schema Datatypes de la W3C. <a href="http://www.w3.org/TR/xmlschema-2/#built-in-primitive-datatypes">http://www.w3.org/TR/xmlschema-2/#built-in-primitive-datatypes</a>, por ejemplo: xsd:string, xsd:boolean, xsd:dateTime
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Restricciones
+					</td>
+					<td>
+						En caso que existan, se especifican las restricciones de los datos
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Referencia
+					</td>
+					<td>
+						En caso que exista, se agrega un link a un documento de referencia para los datos. Por ejemplo, si los datos están definidos utilizando un estándar o formato diferente a XSD, referenciarlo, como ser la Latitud y Longitud en formato de Google maps
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Ejemplo
+					</td>
+					<td>
+						Los valores de ejemplo
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
 
-      </div></td>
+      </td>
       <td width="40" class="borderright">&nbsp;</td>
     </tr>
     <!--fin-contenido-->
