--- a/bin/aux.html
+++ b/bin/aux.html
@@ -1,17 +1,8 @@
 <div>
   <div itemtype="http://www.w3.org/2000/01/rdf-schema#Resource" itemscope>
-    <link itemprop="http://www.w3.org/1999/xhtml/vocab#role" href="http://www.w3.org/1999/xhtml/vocab#button" />
+    <link itemprop="http://www.w3.org/1999/xhtml/vocab#role" href="http://www.w3.org/1999/xhtml/vocab#checkbox" />
   </div>
   <div itemtype="http://www.w3.org/2000/01/rdf-schema#Resource" itemscope>
-    <link itemprop="http://www.w3.org/1999/xhtml/vocab#role" href="http://www.w3.org/1999/xhtml/vocab#navigation" />
-  </div>
-  <div itemtype="http://www.w3.org/2000/01/rdf-schema#Resource" itemscope>
-    <link itemprop="http://www.w3.org/1999/xhtml/vocab#role" href="http://www.w3.org/1999/xhtml/vocab#navigation" />
-  </div>
-  <div itemtype="http://www.w3.org/2000/01/rdf-schema#Resource" itemscope>
-    <link itemprop="http://www.w3.org/1999/xhtml/vocab#role" href="http://www.w3.org/1999/xhtml/vocab#navigation" />
-  </div>
-  <div itemtype="http://www.w3.org/2000/01/rdf-schema#Resource" itemscope>
-    <link itemprop="http://www.w3.org/1999/xhtml/vocab#role" href="http://www.w3.org/1999/xhtml/vocab#navigation" />
+    <link itemprop="http://www.w3.org/1999/xhtml/vocab#role" href="http://www.w3.org/1999/xhtml/vocab#checkbox" />
   </div>
 </div>
